# float3.github.io

./: .gitignore  .gitmodules  .prettierignore  .vale  CNAME  README.md  build.sh  bun.lockb  bunfig.toml  collect_links.sh  config.toml  dates.py  eslint.config.js  flake.nix  freq.ods  fullbuild.sh  fullupdate.sh  generate.sh  index.d.ts  index.md  package-lock.json  package.json  pnpm-lock.yaml  post0.md  quartz.config.default.yaml  quartz.config.ts  quartz.config.yaml  quartz.layout.ts  quartz.lock.json  quartz.ts  report.html  rust-toolchain.toml  temp  tsconfig.json  update.sh  update_and_lint.sh
.cargo/: config.toml
glsl2hlsl/: .gitignore  Cargo.toml  README.md  build.sh
glsl2hlsl/glsl2hlsl-wasm/: Cargo.toml
glsl2hlsl/glsl2hlsl-wasm/src/: lib.rs
glsl2hlsl/glsl2hlsl-wasm/ts/: package.json  pnpm-lock.yaml  webpack.config.js
glsl2hlsl/glsl2hlsl-wasm/ts/src/: file.ts  index.ts
glsl2hlsl/src/glsl2hlsl/: transpiler.rs
programs/tuning_systems-wasm/: .travis.yml  Cargo.toml
programs/tuning_systems-wasm/src/: lib.rs
tools/site/: Cargo.toml
tools/site/src/: aoc.rs  build.rs  content.rs  fsutil.rs  main.rs  maintenance.rs  photos.rs  process.rs  recursive_ji.rs  report.rs  tables.rs
tuningplayground/: .gitignore  .gitmodules  Cargo.toml  build.sh  lint.sh
tuningplayground/music21-rs/: Cargo.toml  generate_chords.py  test.py
tuningplayground/music21-rs/music21/music21/romanText/: tsvEg_v2major.tsv
tuningplayground/music21-rs/src/: interval.rs  note.rs  pitch.rs
tuningplayground/src/: lib.rs
tuningplayground/ts/: .eslintrc.json  .gitignore  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  webpack.config.js  webpack.config.ts
tuningplayground/ts/src/: MIDI.ts  Tone.ts  UI.ts  bootstrap.ts  chords.json  config.ts  events.ts  file.ts  index.ts
tuningplayground/tuning_systems/: Cargo.toml
tuningplayground/tuning_systems/src/: algorithms.rs  fraction.rs  helpers.rs  lib.rs  luts.rs
tuningplayground/tuningplayground/: Cargo.toml
tuningplayground/tuningplayground/src/: lib.rs
wasm/adventofcode/: .gitignore  Cargo.toml  build.rs  build.sh  folders.bash
wasm/adventofcode/aoc2015/: Cargo.toml
wasm/adventofcode/aoc2015/src/: lib.rs  main.rs
wasm/adventofcode/aoc2015/src/day01/: problem1.txt
wasm/adventofcode/aoc2015/src/day24/: mod.rs
wasm/adventofcode/aoc2016/: Cargo.toml
wasm/adventofcode/aoc2016/src/: main.rs
wasm/adventofcode/aoc2017/: Cargo.toml
wasm/adventofcode/aoc2017/src/: main.rs
wasm/adventofcode/aoc2018/: Cargo.toml
wasm/adventofcode/aoc2018/src/: lib.rs  main.rs
wasm/adventofcode/aoc2019/: Cargo.toml
wasm/adventofcode/aoc2019/src/: main.rs
wasm/adventofcode/aoc2020/: Cargo.toml
wasm/adventofcode/aoc2020/src/: lib.rs  main.rs
wasm/adventofcode/aoc2021/: Cargo.toml
wasm/adventofcode/aoc2021/src/: lib.rs  main.rs
wasm/adventofcode/aoc2022/: Cargo.toml
wasm/adventofcode/aoc2022/src/: main.rs
wasm/adventofcode/aoc2023/: Cargo.toml
wasm/adventofcode/aoc2023/src/: lib.rs  main.rs
wasm/adventofcode/aoc2024/: Cargo.toml
wasm/adventofcode/aoc2024/src/: lib.rs  main.rs
wasm/adventofcode/src/: lib.rs  main.rs
wasm/adventofcode/src/aoc2015/: mod.rs
wasm/adventofcode/src/aoc2018/: mod.rs
wasm/adventofcode/src/aoc2019/: main.rs  mod.rs
wasm/adventofcode/src/aoc2020/: main.rs
wasm/adventofcode/src/aoc2023/: main.rs
wasm/adventofcode/src/aoc2025/: mod.rs
wasm/adventofcode/src/shared/: day.rs  year.rs
wasm/adventofcode/ts/: bunfig.toml  package.json  pnpm-lock.yaml  webpack.config.js
wasm/adventofcode/ts/src/: bootstrap.ts  index.ts  ui.ts
wasm/bundle/: Cargo.toml
wasm/bundle/src/: aoc.rs  lib.rs
wasm/bundle/ts/: package.json  pnpm-lock.yaml  webpack.config.js
wasm/bundle/ts/src/: aoc.ts  index.ts
wasm/glsl2hlsl/: .gitignore  Cargo.toml  build.sh  bunfig.toml  test.hlsl.shader
wasm/glsl2hlsl/glsl2hlsl-wasm/: Cargo.toml
wasm/glsl2hlsl/glsl2hlsl-wasm/src/: lib.rs
wasm/glsl2hlsl/glsl2hlsl-wasm/ts/: bun.lockb  package.json  pnpm-lock.yaml  webpack.config.js
wasm/glsl2hlsl/src/glsl2hlsl/: downloader.rs  preprocessor.rs  transpiler.rs  typechecker.rs
wasm/textprocessing/: Cargo.toml  build.sh
wasm/textprocessing/hangeul_conversion/: Cargo.toml
wasm/textprocessing/hangeul_conversion/src/: block.rs  consonant.rs  hangeul.rs  lib.rs  mr.rs  romanization.rs  rr.rs  vowel.rs
wasm/textprocessing/src/: lib.rs
wasm/textprocessing/src/wasm/: chinese.rs  encoding.rs  japanese.rs  korean.rs  mod.rs  numbers.rs  scripts.rs
wasm/textprocessing/ts/: bun.lockb  package.json  pnpm-lock.yaml  webpack.config.js
wasm/textprocessing/ts/src/: index.ts
wasm/tuningplayground/: .gitignore  Cargo.toml  build.sh  generate_chords.py  todo
wasm/tuningplayground/chord_generator/: Cargo.toml
wasm/tuningplayground/chord_generator/src/: main.rs
wasm/tuningplayground/keymapping/: Cargo.toml
wasm/tuningplayground/keymapping/src/: lib.rs
wasm/tuningplayground/music21-rs/: .gitignore  Cargo.toml  LICENSE  call_tree_profiler.py  callstack.txt  full_call_tree.json  full_call_tree.txt  generate_chords.py  test.py
wasm/tuningplayground/music21-rs/src/: base.rs  consts.rs  defaults.rs  exception.rs  fraction.rs  interval.rs  lib.rs  prebase.rs  specifier.rs  stepname.rs  tests.rs
wasm/tuningplayground/src/: lib.rs
wasm/tuningplayground/ts/: bun.lockb  package.json  pnpm-lock.yaml  webpack.config.js
wasm/tuningplayground/ts/src/: UI.ts
wasm/tuningplayground/tuning_systems/: Cargo.toml
wasm/tuningplayground/tuning_systems/src/: algorithms.rs  config.rs  fraction.rs  helpers.rs  lib.rs  luts.rs  tone.rs  tuning_systems.rs
wasm/tuningplayground/tuning_systems/tests/: tests.rs
wasm/wasm/: .gitignore  Cargo.toml  build.sh
wasm/wasm/src/: aoc.rs  bayes.rs  chars.rs  glsl.rs  graph.rs  krabby.rs  lib.rs  movies.rs  photography.rs  polyrhythm.rs  random.rs  recursive_ji.rs  trolley.rs
wasm/wasm/ts/: package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
wasm/wasm/ts/src/: index.ts  polyrhythm.ts  tuningplayground.ts
(+750 files in other folders)
