[package]
name = "glsl2hlsl"
version = "0.1.0"
authors = ["Pema Malling <pemamalling@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
downloader = ["dep:ureq"]

[dependencies]
glsl = "7.0.0"
ureq = { version = "2.12.1", features = ["json"], optional = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
md5 = "0.7.0"

[workspace]
members = ["glsl2hlsl-wasm"]

[profile.release]
opt-level = 's'
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
overflow-checks = false
panic = "unwind"
rpath = false
split-debuginfo = "off"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
