[package]
name = "tuning_systems-wasm"
version = "0.1.0"
authors = ["hill <hill@hilll.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tuning_systems = "*"
wasm-bindgen = "0.2.91"
console_error_panic_hook = { version = "0.1.6", optional = true } # greater code size but forward panics to console
# wee_alloc = { version = "0.4.5", optional = true } # smaller code size but smaller 

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
