[package]
authors = ["hill <hill@hilll.dev>"]
description = "a crate that provides ratios for different musical tuning systems"
edition = "2021"
keywords = ["music", "tuning"]
license = "AGPL-3.0"
name = "tuning_systems"
repository = "https://github.com/float3/tuningplayground"
version = "1.0.0"

[features]
default = []
