[package]
name = "adventofcode"
version = "1.0.0"
edition = "2021"
authors = ["hill <hill@hilll.dev>"]
description = "adventofcode done in wasm"
license = "AGPL-3.0"
repository = "https://github.com/float3/float3.github.io"

[workspace]
members = [
    "aoc2015",
    "aoc2016",
    "aoc2017",
    "aoc2018",
    "aoc2019",
    "aoc2020",
    "aoc2021",
    "aoc2022",
    "aoc2023",
    "aoc2024",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["mini-alloc", "wasm"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
mini-alloc = ["dep:mini-alloc"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
mini-alloc = { version = "0.6.0", optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }
aoc2015 = { path = "aoc2015" }
aoc2016 = { path = "aoc2016" }
aoc2017 = { path = "aoc2017" }
aoc2018 = { path = "aoc2018" }
aoc2019 = { path = "aoc2019" }
aoc2020 = { path = "aoc2020" }
aoc2021 = { path = "aoc2021" }
aoc2022 = { path = "aoc2022" }
aoc2023 = { path = "aoc2023" }
aoc2024 = { path = "aoc2024" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = 's'
overflow-checks = false
panic = "unwind"
rpath = false
split-debuginfo = "off"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
