[package]
name = "adventofcode"
version = "1.0.0"
edition = "2024"
authors = ["hill <hill@hilll.dev>"]
description = "adventofcode done in wasm"
license = "AGPL-3.0"
repository = "https://github.com/float3/float3.github.io"

[build-dependencies]
syntect = "5.2.0"
walkdir = "2.5.0"
minify-html = "0.16.4"
