[package]
name = "bundle"
version = "0.1.0"
authors = ["hill"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["mini-alloc", "wasm"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
mini-alloc = ["dep:mini-alloc"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
mini-alloc = { version = "0.8.1", optional = true }
glsl2hlsl-wasm = { path = "../glsl2hlsl/glsl2hlsl-wasm" }
adventofcode = { path = "../adventofcode/" }
textprocessing = { path = "../textprocessing/" }
tuningplayground = { path = "../tuningplayground/" }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = 's'
overflow-checks = false
panic = "unwind"
rpath = false
split-debuginfo = "off"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
