[package]
name = "glsl2hlsl"
version = "0.1.0"
authors = ["Pema Malling <pemamalling@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["downloader"]
# downloader = ["dep:ureq"]

[dependencies]
glsl = "7.0.0"
# ureq = { version = "3.0.5", features = ["json"], optional = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
md5 = "0.7.0"
