[package]
name = "textprocessing"
version = "1.0.0"
edition = "2024"
authors = ["hill <hill@hilll.dev>"]
description = "expose some text processing functions to wasm"
license = "AGPL-3.0"
repository = "https://github.com/float3/float3.github.io"

[workspace]
# members = ["hangeul_conversion"]

[dependencies]
bpmf_py = "0.1.0"
character_converter = "2.1.5"
chinese-number = "0.7.7"
hanja = "0.1.1"
japanese = "0.1.2"
japanese_number_converter = "0.1.0"
pinyin = "0.10.0"
pinyin_zhuyin = "0.2.0"
roman = "0.1.6"
wasm-bindgen = { version = "0.2.100" }
hangeul_conversion = { path = "hangeul_conversion" }
