[package]
authors = ["hill <hill@hilll.dev>"]
description = "expose my rust libraries to wasm"
edition = "2021"
license = "AGPL-3.0"
name = "tuningplayground"
repository = "https://github.com/float3/tuningplayground"
version = "1.0.0"

[workspace]
members = ["tuning_systems", "keymapping"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["mini-alloc", "wasm"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
mini-alloc = ["dep:mini-alloc"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
mini-alloc = { version = "0.7.0", optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }
tuning_systems = { path = "./tuning_systems" }
keymapping = { path = "./keymapping" }

# [dev-dependencies]
# wasm-bindgen-test = { version = "0.3.41" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = 's'
overflow-checks = false
panic = "unwind"
rpath = false
split-debuginfo = "off"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
