[package]
authors = ["hill <hill@hilll.dev>"]
description = "expose my rust libraries to wasm"
edition = "2021"
license = "AGPL-3.0"
name = "tuningplayground"
repository = "https://github.com/float3/tuningplayground"
version = "1.0.0"

[workspace]
members = ["tuning_systems", "keymapping"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2.100", optional = true }
tuning_systems = { path = "./tuning_systems" }
keymapping = { path = "./keymapping" }
