[package]
name = "wasm"
version = "0.1.0"
authors = ["hill"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["mini-alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
mini-alloc = ["dep:mini-alloc"]

[dependencies]
tuningplayground = { path = "../tuningplayground/" }
music21-rs = { git = "https://github.com/float3/music21-rs.git"}
wasm-bindgen = { version = "0.2.100" }
console_error_panic_hook = { version = "0.1.7", optional = true }
mini-alloc = { version = "0.8.1", optional = true }
glsl2hlsl = { path = "../glsl2hlsl" }
adventofcode = { path = "../adventofcode/" }
textprocessing = { path = "../textprocessing/" }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = true
lto = true
opt-level = 's'
overflow-checks = false
panic = "unwind"
rpath = false
split-debuginfo = "off"
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
