[package]
authors = ["hill <hill@hilll.dev>"]
description = "a crate that provides DAW like keyboard maps for different keybaords"
edition = "2021"
keywords = ["VMPK", "keyboard"]
license = "AGPL-3.0"
name = "keymapping"
repository = "https://github.com/float3/tuningplayground"
version = "1.0.0"

[features]
default = []

[dependencies]
lazy_static = "1.5.0"
