[package]
authors = ["hill <hill@hilll.dev>"]
description = "a rust port of music21 (for now just the chord naming algorithm)"
edition = "2021"
keywords = ["music", "chords", "music21"]
license = "LICENSE"
name = "music21-rs"
repository = "https://github.com/float3/tuningplayground"
version = "0.0.1"

[features]
default = []

[dependencies]
derivative = "2.2.0"
fraction = "0.15.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
num = "0.4.3"
num-traits = "0.2.19"
